ferias de la ciudad actualizacion 04Nov de 2024

--- a/index.html
+++ b/index.html
@@ -55,12 +55,9 @@
 
 	<!-- en la Carpeta DATA estan los js como capas-->
 	<script type="text/javascript" src="data/barrio.js"></script>
-	<script type="text/javascript" src="data/ferias_Oct2024.js"></script>
+	<!-- <script type="text/javascript" src="data/ferias_Oct2024.js"></script> -->
 
-	
-
-	
-
+	<script type="text/javascript" src="data/ferias_Nov2024.js"></script>
 
 	<style>
 		html,
@@ -184,7 +181,7 @@
 <body>
 	<div id="map">
 
-		<div class="info legend">
+		<!-- <div class="info legend">
 			<div class="legend-item">
 				<i style="background: #E4DFEC"></i> 1
 			</div>
@@ -203,7 +200,7 @@
 			<div class="legend-item">
 				<i style="background: #FFD966"></i> 6
 			</div>
-		</div>
+		</div> -->
 	</div>
 
 
