--- a/index.html
+++ b/index.html
@@ -144,41 +144,39 @@
 			z-index: 99999;
 		}
 
-		/* Estilos CSS para la leyenda */
-		.info.legend {
-			background: white;
-			padding: 10px;
-			border: 1px solid #ccc;
-			border-radius: 5px;
-			font-size: 12px;
-			display: grid;
-			grid-template-columns: repeat(2, 1fr);
-			/* Crea 5 columnas */
-			grid-gap: 0px;
-			/* Espacio entre los elementos */
-			align-items: end;
-			text-align: right;
-		}
+		
+/* Estilos CSS para la leyenda */
+.info.legend {
+    background: white;
+    padding: 10px;
+    border: 1px solid #ccc;	
+    border-radius: 5px;
+    font-size: 12px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); /* Crea 5 columnas */
+    grid-gap: 0px; /* Espacio entre los elementos */
+    align-items: center;
+    text-align: center;
+}
 
-		/* Estilos para los círculos de colores en la leyenda */
-		.info.legend i {
-			width: 10px;
-			height: 10px;
-			display: -moz-grid-line;
-			border-radius: 50%;
-			margin-right: 5px;
-		}
+/* Estilos para los círculos de colores en la leyenda */
+.info.legend i {
+    width: 10px;
+    height: 10px;
+    display: -moz-grid-line;
+    border-radius: 50%;
+    margin-right: 5px;
+}
 
-		/* Estilos para los elementos de la leyenda */
-		.legend-item {
-			display: inline;
-			align-items: center;
-			justify-content: left;
-			flex-direction: column-reverse;
-			/* Organiza los números debajo de los círculos */
-			font-size: 10px;
-			/* Ajusta el tamaño de fuente si es necesario */
-		}
+/* Estilos para los elementos de la leyenda */
+.legend-item {
+    display: inline;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column-reverse; /* Organiza los números debajo de los círculos */
+    font-size: 10px; /* Ajusta el tamaño de fuente si es necesario */
+}
+
 	.barrio-label {
     font-size: 12px;
     color: #2a2929;
@@ -425,6 +423,7 @@ function actualizarTooltips() {
 		L.control.zoom({ position: 'topright' }).addTo(map);
 		// Eventos para actualizar los tooltips cuando cambian el zoom o la vista del mapa
 map.on('moveend zoomend', actualizarTooltips);
+createLegendFerias();
 
 
 	</script>
